--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@ body{
 #headerImage {
   border-style: solid;
 }
+
+#Al {border-style: solid;
+  width: 150px;
+  height: 150px;
+
+}
+#Ed {border-style: solid;
+width: 150px;
+height: 150px;
+}
+
 h1{font-size:60px;
-text-align: center;}
+text-align: center;
+}
+
 img{width:500px}
